edit box for firizbi

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('APPLE & GRAPE'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/8.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]')"
+                                onclick="changeText('APPLE & GRAPE'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]')"
                                 src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
@@ -471,7 +471,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('BERRY MIX '); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
+                                onclick="changeText('BERRY MIX '); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/5_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BERRY MIX 4.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -480,7 +480,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('BLUEBERRY'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
+                                onclick="changeText('BLUEBERRY'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\BLUE HAWAI BLUEBERRY 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -489,7 +489,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('STRAWBERRY'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
+                                onclick="changeText('STRAWBERRY'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\STRAWBERRY MIX 8.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -498,7 +498,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('LEMON & MINT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\LEMON & MINT 5.png" alt="">
+                                onclick="changeText('LEMON & MINT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/8_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\LEMON & MINT 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\LEMON & MINT 5.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -507,7 +507,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('LYCHEE MIX'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\LYCHEE MIX 30.png" alt="">
+                                onclick="changeText('LYCHEE MIX'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/2_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\LYCHEE MIX 30.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\LYCHEE MIX 30.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -516,7 +516,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('MANGO & PEACH'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\MANGO & PEACH 3.png" alt="">
+                                onclick="changeText('MANGO & PEACH'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/1_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\MANGO & PEACH 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\MANGO & PEACH 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -525,7 +525,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('PASSION & FRUIT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
+                                onclick="changeText('PASSION & FRUIT'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/3_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\PASSION & FRUIT 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
@@ -534,7 +534,7 @@
                         </div>
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                                onclick="changeText('POMEGRANATE MIX'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('star/Cartoons/55.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
+                                onclick="changeText('POMEGRANATE MIX'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  boxs('STAR/Cartoons/6_1.png'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#6A0066]')" src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\FRIZBI\POMEGRANATE MIX 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
