--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
                     src="star\orange/orange-juice-splash.svg" alt="">
@@ -107,7 +107,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
                     src="star\orange/orange-juice-splash.svg" alt="">
@@ -148,7 +148,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\CODE ROD\CODE ROD 2.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
@@ -187,7 +187,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
@@ -226,7 +226,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
@@ -265,7 +265,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
@@ -304,7 +304,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM LEMON 1.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
@@ -343,7 +343,7 @@
                     src="" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[20%]  2xl:w-[23%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\EINSENG ENERGY\EINSENG ENERGY 2.png" alt="">
                 <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[0%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
@@ -457,7 +457,7 @@
         <!-- icons section -->
         <div class="hidden section1 frizbi">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb pr-[80%] sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb pr-[80%] sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -549,7 +549,7 @@
         <!-- icons section -->
         <div class="hidden section1 code">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 ">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -578,7 +578,7 @@
         <!-- icons section -->
         <div class="hidden section1 egy">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -606,7 +606,7 @@
         <!-- icons section -->
         <div class="hidden section1 boom_orange">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -624,7 +624,7 @@
         <!-- icons section -->
         <div class="hidden section1 boom_cola">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -643,7 +643,7 @@
         <!-- icons section -->
         <div class="hidden section1 boom_lemon">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0">
                     <div class=" flex justify-center">
                         <div class="group relative w-20">
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
