add star boom logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\FRIZBI-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('boom2'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/نكهة برتقال 5.png');">
-                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/boom-4-2.png" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/star-boom.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('code'); boxs(''); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]'); drinks('STAR/CODE ROD/CODE ROD 2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\CODE-2.png" alt="">
@@ -80,7 +80,7 @@
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
-                <img class="logoImage my-[10%]" src="star/LOGO/boom-4-1.png" alt="">
+                <img class="logoImage my-[10%]" src="star/LOGO/star-boom-1.png" alt="">
                 <h2 id="fruit-text" class="text-base uppercase">Orange</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
                     You might be looking at this Slider Revolution template and wondering how the heck you’re going to
